# artifacts-IoT-virt-comp

./: .dockerignore  Dockerfile  Makefile  Makefile.include  README.md  docker-compose.yml  requirements.txt
RIOT/makefiles/: rbpf.inc.mk
analysis/: gc_pressure.ipynb  load_run_benchmark.ipynb  profiles.ipynb  ram_rom.ipynb
analysis/modules/: design.py
configs/: memory_requirements.csv  nrf-config-debug.yaml  nrf-config-limited.yaml  nrf-config.yaml
data/: benchmark_profiles.csv
data/memory/: dynamic_memory.csv  section_sizes.csv
data/runtime/: bench_runtime.csv  gc_pressure_runtime.csv
jerryscript/: .gitignore  Makefile  README.md  main.c
jerryscript/benchmarks/: crc_32.js  huffbench.js  matmult-int.js  md5.js  mont64.js  nettle-sha256.js  nsichneu.js  slre.js  statemate.js  tarfind.js  ud.js  xgboost.js
lua/: .gitignore  Makefile  main.c
lua/benchmarks/: crc_32.lua  huffbench.lua  matmult-int.lua  md5.lua  mont64.lua  nettle-sha256.lua  nsichneu.lua  slre.lua  statemate.lua  tarfind.lua  ud.lua  xgboost.lua
micro-bpf/: .gitignore  Cargo.toml  Makefile  build.rs  nsichneu_asm_analysis.sh
micro-bpf/ebpf/: Makefile  crc_32.c  helpers.h  huffbench.c  matmult-int.c  md5.c  mont64.c  nettle-sha256.c  nsichneu.c  shared.h  slre.c  statemate.c  tarfind.c  ud.c  xgboost.c
micro-bpf/src/: lib.rs
micro-bpf/src/infra/: allocator.rs
micro-bpf/src/middleware/: mod.rs  riot_middleware.rs
micro-bpf/src/util/: hacks.rs  mod.rs
micropython/: .gitignore  Makefile  main.c
micropython/benchmarks/: crc_32.py  huffbench.py  matmult-int.py  md5.py  mont64.py  nettle-sha256.py  nsichneu.py  (+5 more)
native/: Makefile  main.c  support.h
scripts/: config.py  measure_memory.py  run_memory.py  run_script.py  runtime_alloc.py  symbol-mappings.yml  update_config.py
wamr/: .gitignore  Makefile  README.md  fast_interpreter_config.cmake  iwasmt.c  main.c  normal_interpreter_config.cmake
(+32 files in other folders)
